update lang & add gitignore

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <figure class="quote bordered">
       <blockquote>
-        <q lang="ru">Я поняла, что буду рисовать на людях. Одеждой.</q>
+        <q>Я поняла, что буду рисовать на людях. Одеждой.</q>
       </blockquote>
     </figure>
   </div>
@@ -144,7 +144,7 @@
 
     <figure class="quote bordered">
       <blockquote>
-        <q lang="ru">Процесс работы — это обтачивание себя!</q>
+        <q>Процесс работы — это обтачивание себя!</q>
       </blockquote>
     </figure>
   </div>
