--- a/index.html
+++ b/index.html
@@ -15,201 +15,214 @@
 
 <body>
 
-  <div class="grid">
+  <main>
+    <div class="grid">
 
-    <header class="header">
+      <header class="header">
 
-      <div class="main-img"></div>
-      <section>
-        <h1>Анна Гусева</h1>
-        <h2>
-          Стилист, художник по костюмам, креативный директор. Основатель проекта Style System. Преподаватель по стилю
-          в BHSAD.
-        </h2>
-        <h4>_______________<br>Фото: Юля Даль</h4>
-      </section>
-    </header>
+        <div class="main-img"></div>
+        <section>
+          <h1>Анна Гусева</h1>
+          <h2>
+            Стилист, художник по костюмам, креативный директор. Основатель проекта Style System. Преподаватель по стилю
+            в BHSAD.
+          </h2>
+          <h4>_______________<br>Фото: Юля Даль</h4>
+        </section>
+      </header>
 
-    <div class="img-wrap">
-      <img src="images/img2.jpg" alt="">
+      <div class="img-wrap">
+        <img src="images/img2.jpg" alt="">
+      </div>
+
+      <article class="content">
+        <h3>Аня, кем ты мечтала стать в детстве?</h3>
+        <p>
+          Певицей. Но из-за полного отсутствия слуха семейным советом была распределена на театральное отделение лицея
+          искусств, окончив который, конечно, подалась в актрисы. Десять лет отыграв в театрах, осознала некоторые
+          внутренние несоответствия с постоянной
+          демонстрацией себя.
+        </p>
+        <p>
+          Я решила, что гораздо органичнее для меня демонстрировать свое видение, нежели наличие, так
+          что бросила театр, агента и перешла в сферу визуальных коммуникаций, став художником, стилистом в индустрии
+          моды
+          и художником по костюмам
+          в итоге.
+        </p>
+      </article>
+
+      <figure class="quote bordered">
+        <blockquote>
+          <q>Я поняла, что буду рисовать на людях. Одеждой.</q>
+        </blockquote>
+      </figure>
     </div>
 
-    <article class="content">
-      <h3>Аня, кем ты мечтала стать в детстве?</h3>
-      <p>
-        Певицей. Но из-за полного отсутствия слуха семейным советом была распределена на театральное отделение лицея
-        искусств, окончив который, конечно, подалась в актрисы. Десять лет отыграв в театрах, осознала некоторые
-        внутренние несоответствия с постоянной
-        демонстрацией себя.
-      </p>
-      <p>
-        Я решила, что гораздо органичнее для меня демонстрировать свое видение, нежели наличие, так
-        что бросила театр, агента и перешла в сферу визуальных коммуникаций, став художником, стилистом в индустрии моды
-        и художником по костюмам
-        в итоге.
-      </p>
-    </article>
+    <div class="grid media">
 
-    <figure class="quote bordered">
-      <blockquote>
-        <q>Я поняла, что буду рисовать на людях. Одеждой.</q>
-      </blockquote>
-    </figure>
-  </div>
+      <div class="img-wrap">
+        <img src="images/img4.jpg" alt="">
+      </div>
 
-  <div class="grid media">
-
-    <div class="img-wrap">
-      <img src="images/img4.jpg" alt="">
+      <article class="content">
+        <h3>С чего началось это увлечение?</h3>
+        <p>
+          Я всегда любила людей и рисовать. Совместив эти два пристрастия, я поняла, что буду рисовать на людях.
+          Одеждой.
+          Я решила стать персональным шопером, создала проект, продающий мои услуги в интернете, и постепенно изучала
+          моду, ездила в Нью-Йорк на курсы, окончила Британку. Потом снимала для журналов, писала статьи в Marie Claire
+          и
+          SNC, давала мастер-классы...
+        </p>
+        <p>
+          Мне хотелось делать что-то красивое и полезное одновременно. В моей работе это часто получается.
+        </p>
+        <h3>Каким был твой первый проект?</h3>
+        <p>
+          Если говорить о рекламе, то первый проект, на котором я работала как стилист, — съемка «Мегафона» в 2017 году,
+          на которой я отвечала за селебрити-стайлинг певицы Ёлки.
+        </p>
+      </article>
     </div>
 
-    <article class="content">
-      <h3>С чего началось это увлечение?</h3>
-      <p>
-        Я всегда любила людей и рисовать. Совместив эти два пристрастия, я поняла, что буду рисовать на людях. Одеждой.
-        Я решила стать персональным шопером, создала проект, продающий мои услуги в интернете, и постепенно изучала
-        моду, ездила в Нью-Йорк на курсы, окончила Британку. Потом снимала для журналов, писала статьи в Marie Claire и
-        SNC, давала мастер-классы...
-      </p>
-      <p>
-        Мне хотелось делать что-то красивое и полезное одновременно. В моей работе это часто получается.
-      </p>
-      <h3>Каким был твой первый проект?</h3>
-      <p>
-        Если говорить о рекламе, то первый проект, на котором я работала как стилист, — съемка «Мегафона» в 2017 году,
-        на которой я отвечала за селебрити-стайлинг певицы Ёлки.
-      </p>
-    </article>
-  </div>
+    <div class="grid media-flip">
 
-  <div class="grid media-flip">
+      <div class="img-wrap">
+        <img src="images/img5.jpg" alt="">
+      </div>
 
-    <div class="img-wrap">
-      <img src="images/img5.jpg" alt="">
+      <article class="content">
+        <h3>А сейчас над чем ты работаешь?</h3>
+        <p>
+          Последние полтора года я занимаюсь стилизацией рекламных роликов, музыкальных клипов и кино иногда. Веду курс
+          по
+          стайлингу в Британке у молодежи и наслаждаюсь многочисленными творческими фотосъемками.
+        </p>
+        <p>
+          Вчера был первый экзамен моих студентов! Я волновалась больше всех, по-моему. 22 человека, 22 лука, всего три
+          часа на съемку, условия жестче, чем в рекламном бизнесе. Все справились прекрасно.
+        </p>
+        <h3>Какие качества ты ценишь в командной работе?</h3>
+        <p>
+          Здесь ценно не только умение слушать, но и правильное интерпретирование сказанного. Так часто выходит, что,
+          имея
+          в голове одну картинку, люди объясняют ее суть совсем иными словами. Поэтому приходится читать между строк.
+        </p>
+      </article>
     </div>
 
-    <article class="content">
-      <h3>А сейчас над чем ты работаешь?</h3>
-      <p>
-        Последние полтора года я занимаюсь стилизацией рекламных роликов, музыкальных клипов и кино иногда. Веду курс по
-        стайлингу в Британке у молодежи и наслаждаюсь многочисленными творческими фотосъемками.
-      </p>
-      <p>
-        Вчера был первый экзамен моих студентов! Я волновалась больше всех, по-моему. 22 человека, 22 лука, всего три
-        часа на съемку, условия жестче, чем в рекламном бизнесе. Все справились прекрасно.
-      </p>
-      <h3>Какие качества ты ценишь в командной работе?</h3>
-      <p>
-        Здесь ценно не только умение слушать, но и правильное интерпретирование сказанного. Так часто выходит, что, имея
-        в голове одну картинку, люди объясняют ее суть совсем иными словами. Поэтому приходится читать между строк.
-      </p>
-    </article>
-  </div>
+    <div class="grid multi-col bordered">
 
-  <div class="grid multi-col bordered">
+      <article class="content">
+        <h3>
+          Берешься ли ты за проекты, которые эстетически или содержательно тебе не близки?
+        </h3>
+        <p>
+          В съемках для журналов не берусь. В этом смысла нет. А в рекламе, конечно, берусь! Но там другой кайф совсем.
+          Атмосфера, сложные задачи, короткие сроки, нужно все время задействовать альтернативное мышление. По сути, мне
+          этот набор действий близок! А то, что заказчику нужны розовые платья в бантик, — уже предлагаемые
+          обстоятельства... хотя, иногда и это удается изменить.
+        </p>
+      </article>
+      <article class="content">
 
-    <article class="content">
-      <h3>
-        Берешься ли ты за проекты, которые эстетически или содержательно тебе не близки?
-      </h3>
-      <p>
-        В съемках для журналов не берусь. В этом смысла нет. А в рекламе, конечно, берусь! Но там другой кайф совсем.
-        Атмосфера, сложные задачи, короткие сроки, нужно все время задействовать альтернативное мышление. По сути, мне
-        этот набор действий близок! А то, что заказчику нужны розовые платья в бантик, — уже предлагаемые
-        обстоятельства... хотя, иногда и это удается изменить.
-      </p>
-    </article>
-    <article class="content">
-
-      <h3>Что у тебя в планах на будущее?</h3>
-      <p>
-        Вся моя дальнейшая деятельность связана с масштабными проектами: кино, клипы, реклама. Плюс я давно работаю над
-        созданием talents-агентства для стилистов разных направлений. Обучая молодежь, передаю им видение, которое
-        необходимо, на мой взгляд.
-      </p>
-    </article>
-  </div>
-
-  <div class="grid media-flip img-multi-col">
-
-    <div class="img-wrap">
-      <img src="/images/img6.jpg" alt="">
-    </div>
-    <div class="img-wrap">
-      <img src="/images/img7.jpg" alt="">
-    </div>
-    <div class="img-wrap">
-      <img src="/images/img8.jpg" alt="">
+        <h3>Что у тебя в планах на будущее?</h3>
+        <p>
+          Вся моя дальнейшая деятельность связана с масштабными проектами: кино, клипы, реклама. Плюс я давно работаю
+          над
+          созданием talents-агентства для стилистов разных направлений. Обучая молодежь, передаю им видение, которое
+          необходимо, на мой взгляд.
+        </p>
+      </article>
     </div>
 
-    <figure class="quote bordered">
-      <blockquote>
-        <q>Процесс работы — это обтачивание себя!</q>
-      </blockquote>
-    </figure>
-  </div>
+    <div class="grid media-flip img-multi-col">
 
-  <div class="grid media">
+      <div class="img-wrap">
+        <img src="/images/img6.jpg" alt="">
+      </div>
+      <div class="img-wrap">
+        <img src="/images/img7.jpg" alt="">
+      </div>
+      <div class="img-wrap">
+        <img src="/images/img8.jpg" alt="">
+      </div>
 
-    <div class="img-wrap">
-      <img src="/images/img9.jpg" alt="">
+      <figure class="quote bordered">
+        <blockquote>
+          <q>Процесс работы — это обтачивание себя!</q>
+        </blockquote>
+      </figure>
     </div>
 
-    <article class="content">
+    <div class="grid media">
 
-      <h3>Что для тебя твое дело?</h3>
-      <p>
-        Для меня процесс работы — это обтачивание себя! Я работаю в индустрии моды, и ее основные ветки строятся либо на
-        мейнстриме, либо на протесте. Они постоянно перетекают друг в друга, каждый новый интересный бренд начинает с
-        протеста и со временем неизбежно превращается в мейнстрим. Ровно в тот момент, когда китайские фабрики и Zara
-        начинают копировать их изделия. Gucci, например, на сегодняшний день успевают и там и там. Это временно, как и
-        все остальное.
-      </p>
-      <p>
-        Для меня эта работа — возможность проявлять и изучать себя в этих крайностях. Сегодня одевать
-        людей в Dark Fashion, а завтра — в Chanel. Быть персональным шопером, тихонько работать с одним клиентом, а в
-        следующую минуту управлять армией ассистентов, которые одевают массовку в 100 человек. Эти крайности есть во
-        всех
-        областях жизни: в программировании, в театре, в каждом человеке. Мой путь — мода, и мои две главные задачи жизни
-        — изучать и совершенствовать себя — я решаю через нее.
-      </p>
-    </article>
-  </div>
+      <div class="img-wrap">
+        <img src="/images/img9.jpg" alt="">
+      </div>
 
-  <div class="grid media-flip bq">
+      <article class="content">
 
-    <figure class="quote bordered">
-      <blockquote>
-        <q lang="ru">Я хочу иметь такую же внутреннюю свободу и право на нее.</q>
-      </blockquote>
-    </figure>
-
-
-    <div class="img-wrap">
-      <img src="images/img10.jpg" alt="">
+        <h3>Что для тебя твое дело?</h3>
+        <p>
+          Для меня процесс работы — это обтачивание себя! Я работаю в индустрии моды, и ее основные ветки строятся либо
+          на
+          мейнстриме, либо на протесте. Они постоянно перетекают друг в друга, каждый новый интересный бренд начинает с
+          протеста и со временем неизбежно превращается в мейнстрим. Ровно в тот момент, когда китайские фабрики и Zara
+          начинают копировать их изделия. Gucci, например, на сегодняшний день успевают и там и там. Это временно, как и
+          все остальное.
+        </p>
+        <p>
+          Для меня эта работа — возможность проявлять и изучать себя в этих крайностях. Сегодня одевать
+          людей в Dark Fashion, а завтра — в Chanel. Быть персональным шопером, тихонько работать с одним клиентом, а в
+          следующую минуту управлять армией ассистентов, которые одевают массовку в 100 человек. Эти крайности есть во
+          всех
+          областях жизни: в программировании, в театре, в каждом человеке. Мой путь — мода, и мои две главные задачи
+          жизни
+          — изучать и совершенствовать себя — я решаю через нее.
+        </p>
+      </article>
     </div>
 
-    <article class="content">
+    <div class="grid media-flip bq">
 
-      <h3>
-        А если заглянуть дальше...<br>Как ты представляешь себе старость? Покой ли?
-      </h3>
-      <p>
-        Ага! Покой, как же! У меня давно есть референс на эту тему. Мишель Лами — генеральный директор бренда Rick
-        Owens, жена и муза его же. В 70 лет вся в кольцах, браслетах, короткие платья, пальцы в татуировках, вокруг
-        тусовка, интересное дело, любимый человек. И это не протест против старости или смерти, это настоящая прихоть —
-        быть такой в преклонном возрасте.
-      </p>
-      <p>
-        Прихоть
-        индивидуальна, протест коллективный.
-        Прихоть может себе позволить человек с большим социальным капиталом, но не
-        дети 20-летние. Нарастить этот капитал, прийти к этому опытным путем — это значит выстроить себя по кирпичику, к
-        чему я и стремлюсь. Не просто следовать моде, которая будет там когда-то, не пытаться что-то доказывать. Я хочу
-        иметь такую же внутреннюю свободу и право на нее. Только без сигареты!
-      </p>
-    </article>
-  </div>
+      <figure class="quote bordered">
+        <blockquote>
+          <q>Я хочу иметь такую же внутреннюю свободу и право на нее.</q>
+        </blockquote>
+      </figure>
+
+
+      <div class="img-wrap">
+        <img src="images/img10.jpg" alt="">
+      </div>
+
+      <article class="content">
+
+        <h3>
+          А если заглянуть дальше...<br>Как ты представляешь себе старость? Покой ли?
+        </h3>
+        <p>
+          Ага! Покой, как же! У меня давно есть референс на эту тему. Мишель Лами — генеральный директор бренда Rick
+          Owens, жена и муза его же. В 70 лет вся в кольцах, браслетах, короткие платья, пальцы в татуировках, вокруг
+          тусовка, интересное дело, любимый человек. И это не протест против старости или смерти, это настоящая прихоть
+          —
+          быть такой в преклонном возрасте.
+        </p>
+        <p>
+          Прихоть
+          индивидуальна, протест коллективный.
+          Прихоть может себе позволить человек с большим социальным капиталом, но не
+          дети 20-летние. Нарастить этот капитал, прийти к этому опытным путем — это значит выстроить себя по кирпичику,
+          к
+          чему я и стремлюсь. Не просто следовать моде, которая будет там когда-то, не пытаться что-то доказывать. Я
+          хочу
+          иметь такую же внутреннюю свободу и право на нее. Только без сигареты!
+        </p>
+      </article>
+    </div>
+  </main>
 
 </body>
 
