--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="ru">
+<html class="no-js" dir="ltr" lang="ru">
 
 <head>
   <meta charset="utf-8">
@@ -7,6 +7,9 @@
   <meta name="description" content="Фото и текст: Юля Даль" />
   <meta name="keywords" content="photo, interview" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="preload" href="fonts/Austin-Italic-Cy-Web.woff2" as="font" type="font/woff2" crossorigin />
+  <link rel="preload" href="fonts/Austin-Medium-Cy-Web.woff2" as="font" type="font/woff2" crossorigin />
+  <link rel="preload" href="fonts/StyreneB-Regular-Cy-Web.woff2" as="font" type="font/woff2" crossorigin />
   <link rel="stylesheet" href="css/main.css">
   <meta name="theme-color" content="#fafafa">
 </head>
