--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </section>
       </header>
       <div class="img-wrap">
-        <img src="images/img2.jpg" alt="">
+        <img src="img/2.jpg" alt="">
       </div>
       <article class="content">
         <h3>Аня, кем ты мечтала стать в детстве?</h3>
@@ -57,7 +57,7 @@
 
     <div class="grid media">
       <div class="img-wrap">
-        <img src="images/img4.jpg" alt="">
+        <img src="img/4.jpg" alt="">
       </div>
       <article class="content">
         <h3>С чего началось это увлечение?</h3>
@@ -82,7 +82,7 @@
 
     <div class="grid media-flip">
       <div class="img-wrap">
-        <img src="images/img5.jpg" alt="">
+        <img src="img/5.jpg" alt="">
       </div>
       <article class="content">
         <h3>А сейчас над чем ты работаешь?</h3>
@@ -129,13 +129,13 @@
 
     <div class="grid media-flip img-multi-col">
       <div class="img-wrap">
-        <img src="/images/img6.jpg" alt="">
+        <img src="img/6.jpg" alt="">
       </div>
       <div class="img-wrap">
-        <img src="/images/img7.jpg" alt="">
+        <img src="img/7.jpg" alt="">
       </div>
       <div class="img-wrap">
-        <img src="/images/img8.jpg" alt="">
+        <img src="img/8.jpg" alt="">
       </div>
       <figure class="quote bordered">
         <blockquote>
@@ -146,7 +146,7 @@
 
     <div class="grid media">
       <div class="img-wrap">
-        <img src="/images/img9.jpg" alt="">
+        <img src="img/9.jpg" alt="">
       </div>
       <article class="content">
         <h3>Что для тебя твое дело?</h3>
@@ -177,7 +177,7 @@
         </blockquote>
       </figure>
       <div class="img-wrap">
-        <img src="images/img10.jpg" alt="">
+        <img src="img/10.jpg" alt="">
       </div>
       <article class="content">
         <h3>
