--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Анна Гусева | Интервью</title>
   <meta name="description" content="Фото и текст: Юля Даль" />
-  <meta name="keywords" content="photo, interview" />
+  <meta name="keywords" content="photo in media, interview" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="preload" href="fonts/Austin-Italic-Cy-Web.woff2" as="font" type="font/woff2" crossorigin />
   <link rel="preload" href="fonts/Austin-Medium-Cy-Web.woff2" as="font" type="font/woff2" crossorigin />
