--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" dir="ltr" lang="ru">
+<html dir="ltr" lang="ru-RU" class="no-js" >
 
 <head>
   <meta charset="utf-8">
@@ -30,22 +30,19 @@
         </section>
       </header>
       <div class="img-wrap">
-        <img src="img/2.jpg" alt="">
+        <img src="img/2.jpg" alt="" loading="lazy">
       </div>
       <article class="content">
         <h3>Аня, кем ты мечтала стать в детстве?</h3>
         <p>
           Певицей. Но из-за полного отсутствия слуха семейным советом была распределена на театральное отделение лицея
           искусств, окончив который, конечно, подалась в актрисы. Десять лет отыграв в театрах, осознала некоторые
-          внутренние несоответствия с постоянной
-          демонстрацией себя.
+          внутренние несоответствия с постоянной демонстрацией себя.
         </p>
         <p>
-          Я решила, что гораздо органичнее для меня демонстрировать свое видение, нежели наличие, так
-          что бросила театр, агента и перешла в сферу визуальных коммуникаций, став художником, стилистом в индустрии
-          моды
-          и художником по костюмам
-          в итоге.
+          Я решила, что гораздо органичнее для меня демонстрировать свое видение, нежели наличие, так что бросила театр,
+          агента и перешла в сферу визуальных коммуникаций, став художником, стилистом в индустрии моды и художником по
+          костюмам в итоге.
         </p>
       </article>
       <figure class="quote bordered">
@@ -57,17 +54,16 @@
 
     <div class="grid media">
       <div class="img-wrap">
-        <img src="img/4.jpg" alt="">
+        <img src="img/4.jpg" alt="" loading="lazy">
       </div>
       <article class="content">
         <h3>С чего началось это увлечение?</h3>
         <p>
           Я всегда любила людей и рисовать. Совместив эти два пристрастия, я поняла, что буду рисовать на людях.
-          Одеждой.
-          Я решила стать персональным шопером, создала проект, продающий мои услуги в интернете, и постепенно изучала
+          Одеждой. Я решила стать персональным шопером, создала проект, продающий мои услуги в интернете, и постепенно
+          изучала
           моду, ездила в Нью-Йорк на курсы, окончила Британку. Потом снимала для журналов, писала статьи в Marie Claire
-          и
-          SNC, давала мастер-классы...
+          и SNC, давала мастер-классы...
         </p>
         <p>
           Мне хотелось делать что-то красивое и полезное одновременно. В моей работе это часто получается.
@@ -82,7 +78,7 @@
 
     <div class="grid media-flip">
       <div class="img-wrap">
-        <img src="img/5.jpg" alt="">
+        <img src="img/5.jpg" alt="" loading="lazy">
       </div>
       <article class="content">
         <h3>А сейчас над чем ты работаешь?</h3>
@@ -129,13 +125,13 @@
 
     <div class="grid media-flip img-multi-col">
       <div class="img-wrap">
-        <img src="img/6.jpg" alt="">
+        <img src="img/6.jpg" alt="" loading="lazy">
       </div>
       <div class="img-wrap">
-        <img src="img/7.jpg" alt="">
+        <img src="img/7.jpg" alt="" loading="lazy">
       </div>
       <div class="img-wrap">
-        <img src="img/8.jpg" alt="">
+        <img src="img/8.jpg" alt="" loading="lazy">
       </div>
       <figure class="quote bordered">
         <blockquote>
@@ -146,7 +142,7 @@
 
     <div class="grid media">
       <div class="img-wrap">
-        <img src="img/9.jpg" alt="">
+        <img src="img/9.jpg" alt="" loading="lazy">
       </div>
       <article class="content">
         <h3>Что для тебя твое дело?</h3>
@@ -177,7 +173,7 @@
         </blockquote>
       </figure>
       <div class="img-wrap">
-        <img src="img/10.jpg" alt="">
+        <img src="img/10.jpg" alt="" loading="lazy">
       </div>
       <article class="content">
         <h3>
