--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html dir="ltr" lang="ru-RU" class="no-js" >
+<html dir="ltr" lang="ru-RU" class="no-js">
 
 <head>
   <meta charset="utf-8">
@@ -30,20 +30,18 @@
         </section>
       </header>
       <div class="img-wrap">
-        <img src="img/2.jpg" alt="" loading="lazy">
+        <img data-src="img/2.jpg" alt="" loading="lazy">
       </div>
       <article class="content">
         <h3>Аня, кем ты мечтала стать в детстве?</h3>
         <p>
           Певицей. Но из-за полного отсутствия слуха семейным советом была распределена на театральное отделение лицея
           искусств, окончив который, конечно, подалась в актрисы. Десять лет отыграв в театрах, осознала некоторые
-          внутренние несоответствия с постоянной демонстрацией себя.
-        </p>
+          внутренние несоответствия с постоянной демонстрацией себя.</p>
         <p>
           Я решила, что гораздо органичнее для меня демонстрировать свое видение, нежели наличие, так что бросила театр,
           агента и перешла в сферу визуальных коммуникаций, став художником, стилистом в индустрии моды и художником по
-          костюмам в итоге.
-        </p>
+          костюмам в итоге.</p>
       </article>
       <figure class="quote bordered">
         <blockquote>
@@ -54,39 +52,33 @@
 
     <div class="grid media">
       <div class="img-wrap">
-        <img src="img/4.jpg" alt="" loading="lazy">
+        <img data-src="img/4.jpg" alt="" loading="lazy">
       </div>
       <article class="content">
         <h3>С чего началось это увлечение?</h3>
         <p>
           Я всегда любила людей и рисовать. Совместив эти два пристрастия, я поняла, что буду рисовать на людях.
           Одеждой. Я решила стать персональным шопером, создала проект, продающий мои услуги в интернете, и постепенно
-          изучала
-          моду, ездила в Нью-Йорк на курсы, окончила Британку. Потом снимала для журналов, писала статьи в Marie Claire
-          и SNC, давала мастер-классы...
-        </p>
+          изучала моду, ездила в Нью-Йорк на курсы, окончила Британку. Потом снимала для журналов, писала статьи в Marie Claire
+          и SNC, давала мастер-классы...</p>
         <p>
-          Мне хотелось делать что-то красивое и полезное одновременно. В моей работе это часто получается.
-        </p>
+          Мне хотелось делать что-то красивое и полезное одновременно. В моей работе это часто получается.</p>
         <h3>Каким был твой первый проект?</h3>
         <p>
           Если говорить о рекламе, то первый проект, на котором я работала как стилист, — съемка «Мегафона» в 2017 году,
-          на которой я отвечала за селебрити-стайлинг певицы Ёлки.
-        </p>
+          на которой я отвечала за селебрити-стайлинг певицы Ёлки.</p>
       </article>
     </div>
 
     <div class="grid media-flip">
       <div class="img-wrap">
-        <img src="img/5.jpg" alt="" loading="lazy">
+        <img data-src="img/5.jpg" alt="" loading="lazy">
       </div>
       <article class="content">
         <h3>А сейчас над чем ты работаешь?</h3>
         <p>
           Последние полтора года я занимаюсь стилизацией рекламных роликов, музыкальных клипов и кино иногда. Веду курс
-          по
-          стайлингу в Британке у молодежи и наслаждаюсь многочисленными творческими фотосъемками.
-        </p>
+          по стайлингу в Британке у молодежи и наслаждаюсь многочисленными творческими фотосъемками.</p>
         <p>
           Вчера был первый экзамен моих студентов! Я волновалась больше всех, по-моему. 22 человека, 22 лука, всего три
           часа на съемку, условия жестче, чем в рекламном бизнесе. Все справились прекрасно.
@@ -94,44 +86,38 @@
         <h3>Какие качества ты ценишь в командной работе?</h3>
         <p>
           Здесь ценно не только умение слушать, но и правильное интерпретирование сказанного. Так часто выходит, что,
-          имея
-          в голове одну картинку, люди объясняют ее суть совсем иными словами. Поэтому приходится читать между строк.
+          имея в голове одну картинку, люди объясняют ее суть совсем иными словами. Поэтому приходится читать между строк.
         </p>
       </article>
     </div>
 
     <div class="grid multi-col bordered">
       <article class="content">
-        <h3>
-          Берешься ли ты за проекты, которые эстетически или содержательно тебе не близки?
-        </h3>
+        <h3>Берешься ли ты за проекты, которые эстетически или содержательно тебе не близки?</h3>
         <p>
           В съемках для журналов не берусь. В этом смысла нет. А в рекламе, конечно, берусь! Но там другой кайф совсем.
           Атмосфера, сложные задачи, короткие сроки, нужно все время задействовать альтернативное мышление. По сути, мне
           этот набор действий близок! А то, что заказчику нужны розовые платья в бантик, — уже предлагаемые
-          обстоятельства... хотя, иногда и это удается изменить.
-        </p>
+          обстоятельства... хотя, иногда и это удается изменить.</p>
       </article>
       <article class="content">
         <h3>Что у тебя в планах на будущее?</h3>
         <p>
           Вся моя дальнейшая деятельность связана с масштабными проектами: кино, клипы, реклама. Плюс я давно работаю
-          над
-          созданием talents-агентства для стилистов разных направлений. Обучая молодежь, передаю им видение, которое
-          необходимо, на мой взгляд.
-        </p>
+          над созданием talents-агентства для стилистов разных направлений. Обучая молодежь, передаю им видение, которое
+          необходимо, на мой взгляд.</p>
       </article>
     </div>
 
     <div class="grid media-flip img-multi-col">
       <div class="img-wrap">
-        <img src="img/6.jpg" alt="" loading="lazy">
+        <img data-src="img/6.jpg" alt="" loading="lazy">
       </div>
       <div class="img-wrap">
-        <img src="img/7.jpg" alt="" loading="lazy">
+        <img data-src="img/7.jpg" alt="" loading="lazy">
       </div>
       <div class="img-wrap">
-        <img src="img/8.jpg" alt="" loading="lazy">
+        <img data-src="img/8.jpg" alt="" loading="lazy">
       </div>
       <figure class="quote bordered">
         <blockquote>
@@ -142,7 +128,7 @@
 
     <div class="grid media">
       <div class="img-wrap">
-        <img src="img/9.jpg" alt="" loading="lazy">
+        <img data-src="img/9.jpg" alt="" loading="lazy">
       </div>
       <article class="content">
         <h3>Что для тебя твое дело?</h3>
@@ -152,17 +138,14 @@
           мейнстриме, либо на протесте. Они постоянно перетекают друг в друга, каждый новый интересный бренд начинает с
           протеста и со временем неизбежно превращается в мейнстрим. Ровно в тот момент, когда китайские фабрики и Zara
           начинают копировать их изделия. Gucci, например, на сегодняшний день успевают и там и там. Это временно, как и
-          все остальное.
-        </p>
+          все остальное.</p>
         <p>
           Для меня эта работа — возможность проявлять и изучать себя в этих крайностях. Сегодня одевать
           людей в Dark Fashion, а завтра — в Chanel. Быть персональным шопером, тихонько работать с одним клиентом, а в
           следующую минуту управлять армией ассистентов, которые одевают массовку в 100 человек. Эти крайности есть во
           всех
           областях жизни: в программировании, в театре, в каждом человеке. Мой путь — мода, и мои две главные задачи
-          жизни
-          — изучать и совершенствовать себя — я решаю через нее.
-        </p>
+          жизни — изучать и совершенствовать себя — я решаю через нее.</p>
       </article>
     </div>
 
@@ -173,7 +156,7 @@
         </blockquote>
       </figure>
       <div class="img-wrap">
-        <img src="img/10.jpg" alt="" loading="lazy">
+        <img data-src="img/10.jpg" alt="" loading="lazy">
       </div>
       <article class="content">
         <h3>
@@ -183,23 +166,25 @@
           Ага! Покой, как же! У меня давно есть референс на эту тему. Мишель Лами — генеральный директор бренда Rick
           Owens, жена и муза его же. В 70 лет вся в кольцах, браслетах, короткие платья, пальцы в татуировках, вокруг
           тусовка, интересное дело, любимый человек. И это не протест против старости или смерти, это настоящая прихоть
-          —
-          быть такой в преклонном возрасте.
-        </p>
+          — быть такой в преклонном возрасте.</p>
         <p>
           Прихоть
           индивидуальна, протест коллективный.
           Прихоть может себе позволить человек с большим социальным капиталом, но не
-          дети 20-летние. Нарастить этот капитал, прийти к этому опытным путем — это значит выстроить себя по кирпичику,
-          к
-          чему я и стремлюсь. Не просто следовать моде, которая будет там когда-то, не пытаться что-то доказывать. Я
-          хочу
-          иметь такую же внутреннюю свободу и право на нее. Только без сигареты!
-        </p>
+          дети 20-летние. Нарастить этот капитал, прийти к этому опытным путем — это значит выстроить себя по кирпичику, к
+          чему я и стремлюсь. Не просто следовать моде, которая будет там когда-то, не пытаться что-то доказывать. Я хочу
+          иметь такую же внутреннюю свободу и право на нее. Только без сигареты!</p>
       </article>
     </div>
   </main>
 
+  <script>
+    window.lazyLoadOptions = {
+      elements_selector: "[loading=lazy]",
+      use_native: true
+    };
+  </script>
+  <script async src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@12.0.0/dist/lazyload.min.js"></script>
 </body>
 
 </html>
