--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="preload" href="fonts/Austin-Medium-Cy-Web.woff2" as="font" type="font/woff2" crossorigin />
   <link rel="preload" href="fonts/StyreneB-Regular-Cy-Web.woff2" as="font" type="font/woff2" crossorigin />
   <link rel="stylesheet" href="css/main.css">
-  <meta name="theme-color" content="#fafafa">
+  <meta name="theme-color" content="#cf0">
 </head>
 
 <body>
